MAINTAINERCLEANFILES = Makefile.in

# systemtest.c and sanitycheck.c are not .h file's 
# but they behaves like one, and need to be included
# in the tarball.

noinst_HEADERS =		\
        systemtest.c            \
        sanitycheck.c           \
	getopt.h		\
	ipc.h			\
	mach_port.h		\
	pThreadUtilities.h	\
	poll.h			\
	portaudio.h		\
	time.c			\
	time.h
